Fix another alignment issue with the navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -260,6 +260,10 @@ hr.double {
 
   form {
     margin: 0;
+
+    .navbar-form {
+      margin-right: 0;
+    }
   }
 
   .navbar-input-group {
